# CPrimer

Class/: CMakeCache.txt  data.txt
Class/include/: FuckScreen.h  Sales_data.h
Class/src/: class_test.cpp  function.cpp
CopyControl_1/include/: MAIL.H
CopyControl_1/src/: function.cpp  main.cpp
CopyControl_2/include/: MYSTRVEC.H  STRVEC.H
CopyControl_2/src/: function.cpp  main.cpp
IO/: CMakeLists.txt  count.txt  data_read.txt  istreamdata.txt  sales_data.txt  sales_data_new.txt
IO/.vscodeU/: settings.json  tasks.json
IO/include/: IOtest.h  Sales_data.h
IO/src/: IOtest.cpp  function.cpp  main.cpp  sales_data.cpp
Memory/: Makefile  cmake_install.cmake  data.txt
Memory-TextQuery/: CMakeLists 0.txt
Memory-TextQuery/include/: TextQuery.H
Memory-TextQuery/src/: function.cpp  main.cpp
Memory/include/: MyBlob.h
Memory/src/: main.cpp
OOP-TextQuery/include/: TEXTQUERY.H
OOP-TextQuery/src/: function.cpp  main.cpp
OOP/Basket/include/: QUOTE.H
OOP/Basket/src/: function.cpp  main.cpp
OOP/include/: QUOTE.H
OOP/src/: function.cpp
SSTL/include/: SSTL.H
SSTL/src/: function.cpp  main.cpp
Template/: data_query.txt
Template/include/: TEMPLATE.H
Template/src/: function.cpp  main.cpp
